# Qt-6-Design-Patterns

./: README.md
18302424_Question1_Vehicle_Details/: CMakeLists.txt  main.cpp  passengervehicles.cpp  passengervehicles.h  transportvehicles.h  vehicledetails.cpp  vehicledetails.h
18302424_Question2_Vehicle_Details/: CMakeLists.txt  filewriter.cpp  filewriter.h  main.cpp  passengervehicles.h  transportvehicles.cpp  transportvehicles.h  vehicledetails.cpp  vehicledetails.h
18302424_Question3_Journal/: CMakeLists.txt  mainwindow.h
18302424_Question4_Journal/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Interface_Segregation_Principle/: CMakeLists.txt  airplane.cpp  airplane.h  bird.cpp  bird.h  main.cpp
Interface_Segregation_Principle/interfaces/: airplane.cpp  airplane.h  iFlying.h  iMachine.h
MyExplorer/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
Open_Closed_Principle/: CMakeLists.txt  caffeinator3000.cpp  caffeinator3000.h  coffeemachine.cpp  coffeemachine.h  main.cpp  shop.cpp  shop.h
Open_Closed_Principle/Interface/: iBrew.h  shop.h
Own_Design_Pattern/: CMakeLists.txt  main.cpp  myeasydevice.cpp  myeasydevice.h
QDirModel/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
QModelView/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
QObject_and_Moc/: CMakeLists.txt  main.cpp  test.cpp  test.h
QObjects_can_not_be_copied/: CMakeLists.txt  cat.cpp  cat.h  main.cpp
QParent_child_relationship/: CMakeLists.txt  main.cpp  test.cpp
QStringListModel/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
QVariant/: CMakeLists.txt  main.cpp  myclass.cpp  myclass.h
Question3/: mainwindow.cpp  mainwindow.ui
Question3_Journal/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
SOLID/: CMakeLists.txt  main.cpp  tempconverter.cpp  tempconverter.h
UI_To_Code_Convertion_AI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
WriteXML/: CMakeLists.txt  main.cpp
